# keplerian-dance

./: CMakeLists.txt  main.cpp
assets/: quotes.txt
include/core/: Body.hpp  Constants.hpp  Physics.hpp  SelectionManager.hpp  Simulation.hpp
include/graphics/: AssetManager.hpp  Camera.hpp  OrbitTrail.hpp  QuoteManager.hpp  Renderer.hpp
include/input/: InputHandler.hpp
include/math/: Utils.hpp  Vector2D.hpp
include/ui/: Label.hpp  Panel.hpp  PlanetInfoSidebar.hpp  UIElement.hpp  UIManager.hpp
include/utils/: Format.hpp
src/: main.cpp
src/core/: Body.cpp  Physics.cpp  SelectionManager.cpp  Simulation.cpp
src/graphics/: AssetManager.cpp  Camera.cpp  OrbitTrail.cpp  QuoteManager.cpp  Renderer.cpp
src/input/: InputHandler.cpp
src/ui/: Label.cpp  Panel.cpp  PlanetInfoSidebar.cpp  UIManager.cpp
